kubernetes/apps/networking/envoy/gateway/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: envoy
  annotations:
    external-dns.alpha.kubernetes.io/target: ingress.${SECRET_DOMAIN_2}
spec:
  gatewayClassName: envoy
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: Same
    - name: https
      protocol: HTTPS
      port: 443
      hostname: "*.${SECRET_DOMAIN_2}"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        certificateRefs:
          - kind: Secret
            name: ${SECRET_DOMAIN_2/./-}-production-tls
    - name: https3
      protocol: HTTPS
      port: 443
      hostname: "*.${SECRET_DOMAIN_3}"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        certificateRefs:
          - kind: Secret
            name: ${SECRET_DOMAIN_3/./-}-production-tls
    # towonel-agent only: requires PROXY protocol (see envoy-tunnel ClientTrafficPolicy)
    - name: https-tunnel
      protocol: HTTPS
      port: 8443
      hostname: "*.${SECRET_DOMAIN_2}"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        certificateRefs:
          - kind: Secret
            name: ${SECRET_DOMAIN_2/./-}-production-tls
    - name: https3-tunnel
      protocol: HTTPS
      port: 8443
      hostname: "*.${SECRET_DOMAIN_3}"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        certificateRefs:
          - kind: Secret
            name: ${SECRET_DOMAIN_3/./-}-production-tls
